# badnet

./: Cargo.toml  README.md
src/: config.rs  main.rs  node.rs  randstat.rs  state.rs
